<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu_connect"
        android:title="@string/menu_connect_blobo"
        android:showAsAction="never" />
    <item android:id="@+id/menu_show_events"
        android:title="@string/menu_show_events"
        android:showAsAction="never" />
    <!--<item android:id="@+id/menu_show_time_data"-->
        <!--android:title="@string/menu_show_time_data"-->
        <!--android:showAsAction="never" />-->
    <!--<item android:id="@+id/menu_show_map"-->
        <!--android:title="@string/menu_show_map"-->
        <!--android:showAsAction="never" />-->
    <item android:id="@+id/menu_reflection"
        android:title="@string/menu_reflection"
        android:showAsAction="never" />
    <item android:id="@+id/menu_settings"
        android:title="@string/menu_settings"
        android:showAsAction="never" />
    <item android:id="@+id/menu_about"
        android:title="@string/menu_about"
        android:showAsAction="never" />
</menu>
